// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests the DevPulseTable renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DevPulseTable
    fellow={Object {}}
    loading={false}
    ratings={
        Array [
            Object {},
          ]
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Table>
          <TableHeader
                    headers={
                              Array [
                                        "Week",
                                        "Quantity",
                                        "Quality",
                                        "Initiative",
                                        "Communication",
                                        "Professionalism",
                                        "Integration",
                                      ]
                    }
          />
          <DevPulseRow
                    averageRatings={false}
                    rating={Object {}}
          />
</Table>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <TableHeader
              headers={
                            Array [
                                          "Week",
                                          "Quantity",
                                          "Quality",
                                          "Initiative",
                                          "Communication",
                                          "Professionalism",
                                          "Integration",
                                        ]
              }
/>,
            Array [
              <DevPulseRow
                averageRatings={false}
                rating={Object {}}
/>,
            ],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "headers": Array [
                "Week",
                "Quantity",
                "Quality",
                "Initiative",
                "Communication",
                "Professionalism",
                "Integration",
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "weak-key-0",
            "nodeType": "function",
            "props": Object {
              "averageRatings": false,
              "rating": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      false,
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Week",
                                                "Quantity",
                                                "Quality",
                                                "Initiative",
                                                "Communication",
                                                "Professionalism",
                                                "Integration",
                                              ]
                        }
            />
            <DevPulseRow
                        averageRatings={false}
                        rating={Object {}}
            />
</Table>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Week",
                                                "Quantity",
                                                "Quality",
                                                "Initiative",
                                                "Communication",
                                                "Professionalism",
                                                "Integration",
                                              ]
                }
/>,
              Array [
                <DevPulseRow
                  averageRatings={false}
                  rating={Object {}}
/>,
              ],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Week",
                  "Quantity",
                  "Quality",
                  "Initiative",
                  "Communication",
                  "Professionalism",
                  "Integration",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "weak-key-0",
              "nodeType": "function",
              "props": Object {
                "averageRatings": false,
                "rating": Object {},
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        false,
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the DevPulseTable renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DevPulseTable
    fellow={Object {}}
    loading={true}
    ratings={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Table>
          <TableHeader
                    headers={
                              Array [
                                        "Week",
                                        "Quantity",
                                        "Quality",
                                        "Initiative",
                                        "Communication",
                                        "Professionalism",
                                        "Integration",
                                      ]
                    }
          />
</Table>,
        <Loader
          size=""
/>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <TableHeader
              headers={
                            Array [
                                          "Week",
                                          "Quantity",
                                          "Quality",
                                          "Initiative",
                                          "Communication",
                                          "Professionalism",
                                          "Integration",
                                        ]
              }
/>,
            Array [],
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "headers": Array [
                "Week",
                "Quantity",
                "Quality",
                "Initiative",
                "Communication",
                "Professionalism",
                "Integration",
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "size": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Table>
            <TableHeader
                        headers={
                                    Array [
                                                "Week",
                                                "Quantity",
                                                "Quality",
                                                "Initiative",
                                                "Communication",
                                                "Professionalism",
                                                "Integration",
                                              ]
                        }
            />
</Table>,
          <Loader
            size=""
/>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <TableHeader
                headers={
                                Array [
                                                "Week",
                                                "Quantity",
                                                "Quality",
                                                "Initiative",
                                                "Communication",
                                                "Professionalism",
                                                "Integration",
                                              ]
                }
/>,
              Array [],
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "headers": Array [
                  "Week",
                  "Quantity",
                  "Quality",
                  "Initiative",
                  "Communication",
                  "Professionalism",
                  "Integration",
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "size": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests the DevPulseTable renders correctly 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <DevPulseTable
    fellow={Object {}}
    loading={false}
    ratings={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "customStyle": Object {},
      "message": "There's currently no ratings for this fellow",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "customStyle": Object {},
        "message": "There's currently no ratings for this fellow",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
